feat: implement MVP database schema and core modules
Database:
- Rewrite users table with UUID, password_hash
- Add enums: device_type, stream_type, stream_status, connection_type, stream_quality
- Add tables: user_settings, password_resets, devices, sessions, streams
- Add sqlc queries for all tables

Modules:
- auth: register, login, refresh, logout, forgot/reset password
- device: register, list, update, delete, heartbeat, status
- stream: start, end, list, update status/latency/connection

Infrastructure:
- Add JWT auth middleware
- Add JWT config (secret, expiry, refresh expiry)
- Update main.go to wire all modules
- Remove old user module

Docs:
- Update CLAUDE.md with new API routes
- Update roadmap.md with completed features

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,11 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=go_bkd
+DB_NAME=streamz
 DB_SSLMODE=disable  # disable, require, verify-full
+
+# JWT
+JWT_SECRET=your-super-secret-key-change-in-production
+JWT_EXPIRY=15m
+JWT_REFRESH_EXPIRY=168h  # 7 days
+PASSWORD_RESET_EXPIRY=1h
