feat: add STUN/TURN ICE server configuration for WebRTC
- Add ICEConfig to config with STUN/TURN server settings
- Create webrtc module with /api/v1/webrtc/ice-servers endpoint
- Default to OpenRelay (free) for dev, Metered.ca for prod
- Update .env.example with ICE environment variables

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ JWT_SECRET=your-super-secret-key-change-in-production
 JWT_EXPIRY=15m
 JWT_REFRESH_EXPIRY=168h  # 7 days
 PASSWORD_RESET_EXPIRY=1h
+
+# ICE Servers (WebRTC)
+# Dev defaults use OpenRelay (free public TURN)
+ICE_STUN_SERVERS=stun:stun.l.google.com:19302,stun:openrelay.metered.ca:80
+ICE_TURN_SERVERS=turn:openrelay.metered.ca:80,turn:openrelay.metered.ca:443,turn:openrelay.metered.ca:443?transport=tcp
+ICE_TURN_USERNAME=openrelayproject
+ICE_TURN_CREDENTIAL=openrelayproject
+
+# For production, use Metered.ca (500GB free tier):
+# ICE_TURN_SERVERS=turn:a.relay.metered.ca:80,turn:a.relay.metered.ca:443,turns:a.relay.metered.ca:443
+# ICE_TURN_USERNAME=your-metered-api-key
+# ICE_TURN_CREDENTIAL=your-metered-api-secret
